updated theme and code test

--- a/source/_posts/2015-05-27-code-test.md
+++ b/source/_posts/2015-05-27-code-test.md
@@ -7,7 +7,7 @@ categories: [code]
 
 JavaScript:
 
-```js
+{% codeblock lang:js test.js %}
 function $initHighlight(block, flags) {
   try {
     if (block.className.search(/\bno\-highlight\b/) != -1)
@@ -24,7 +24,7 @@ function $initHighlight(block, flags) {
   }
   console.log(Array.every(classes, Boolean));
 }
-```
+{% endcodeblock %}
 
 BASH:
 
